--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Lyrica/setup/setup.iss
 Lyrica/ProjectLyrica.spec
 Lyrica/ProjectLyrica.exe
 Lyrica/setup/ProjectLyrica.exe
+Lyrica/python/__pycache__/language.cpython-313.pyc
