--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ Lyrica/setup/setup.iss
 Lyrica/ProjectLyrica.spec
 Lyrica/ProjectLyrica.exe
 Lyrica/setup/ProjectLyrica.exe
-Lyrica/python/__pycache__/language.cpython-313.pyc
+Lyrica/python/__pycache__
+Lyrica/resources/Songs/desktop.ini
