--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Lyrica/ProjectLyrica.exe
 Lyrica/setup/ProjectLyrica.exe
 Lyrica/python/__pycache__
 Lyrica/resources/Songs/desktop.ini
+Lyrica/python/_ProjectLyrica.py
+Lyrica/python/-ProjectLyrica.py
