--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Lyrica/python/__pycache__
 Lyrica/resources/Songs/desktop.ini
 Lyrica/python/_ProjectLyrica.py
 Lyrica/python/-ProjectLyrica.py
+Lyrica/python/.ProjectLyrica.py
