--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Hauptabhängigkeiten
-customtkinter==5.2.2
-psutil==7.0.0
-pynput==1.8.1
-pygetwindow==0.0.9
-requests==2.32.4
+customtkinter>=5.2.2
+pynput>=1.8.1
+pygetwindow>=0.0.9
+psutil>=7.0.0
+requests>=2.32.4
